Fixing the home bg-img white space

--- a/styles.css
+++ b/styles.css
@@ -751,8 +751,8 @@ footer {
 }
 
 @media screen and (max-width: 23em) {
-  .home .bg-img {
-    overflow-x: hidden;
+  .home {
+    overflow-y: hidden;
   }
 
   .skills .skills-content {
